# md_manager

./: .gitignore  README.md  _Atom.py  _AtomFrame.py  _AtomSelection.py  _CGA.py  _PDBfile.py  __init__.py  _atom_frame_analysis.py  _graph.py  _parameters.py  _pdb_file.py  _pdb_file_class.py  _pmf.py  _utils.py  basic_usage.ipynb  dev_commands_reminder.md  md.yml  pyproject.toml  requirements.txt  setup.py  test.ipynb
.backup/: setup.py
NMA/: _ANM.py  __init__.py  _anm.py  _graph.py
__pycache__/: _anm.ANM_hessian-7.py39.1.nbc  _anm.ANM_hessian-7.py39.nbi  _anm.local_MSF-106.py39.1.nbc  _anm.local_MSF-106.py39.nbi  _anm.non_local_MSF-131.py39.1.nbc  _anm.non_local_MSF-131.py39.nbi  _anm.pfANM_hessian-51.py39.1.nbc  _anm.pfANM_hessian-51.py39.2.nbc  _anm.pfANM_hessian-51.py39.nbi  _anm.pfANM_hessian2-95.py39.1.nbc  _anm.pfANM_hessian2-95.py39.nbi  _pmf.conformational_angles-6.py39.1.nbc  _pmf.conformational_angles-6.py39.nbi  _pmf.conformational_angles-7.py39.1.nbc  _pmf.conformational_angles-7.py39.2.nbc  _pmf.conformational_angles-7.py39.3.nbc  _pmf.conformational_angles-7.py39.nbi
app/md_manager.egg-info/: PKG-INFO  (+3 more)
md_manager/: .gitignore  _CGA.py  _MD_utils.py  _PDB.py  __init__.py  _params.py  conformation.py  core.py  df_operations.py  md_files.py  parameters.py
md_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  pyproject.toml  test_import_modules.py  test_write.py
tools/: PDBtraj_conformations.py  README.md  add_gromacs_ndx.py  dPCA.py
utils/: _ANM_utils.py  _Graph_utils.py  _MD_utils.py  _PDBfile_utils.py  _params.py
(+45 files in other folders)
